--- a/public/dashmin/css/style.css
+++ b/public/dashmin/css/style.css
@@ -1,13 +1,13 @@
-.footer{
+.footer {
     position: fixed;
     bottom: 10px;
 }
 
 /********** Template CSS **********/
 :root {
-    --primary: #009CFF;
-    --light: #F3F6F9;
-    --dark: #191C24;
+    --primary: #009cff;
+    --light: #f3f6f9;
+    --dark: #191c24;
     --danger: #dc3545;
 }
 
@@ -19,29 +19,27 @@
     z-index: 99;
 }
 
-
 /*** Spinner ***/
 #spinner {
     opacity: 0;
     visibility: hidden;
-    transition: opacity .5s ease-out, visibility 0s linear .5s;
+    transition: opacity 0.5s ease-out, visibility 0s linear 0.5s;
     z-index: 99999;
 }
 
 #spinner.show {
-    transition: opacity .5s ease-out, visibility 0s linear 0s;
+    transition: opacity 0.5s ease-out, visibility 0s linear 0s;
     visibility: visible;
     opacity: 1;
 }
 
-
 /*** Button ***/
 .btn {
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .btn.btn-primary {
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .btn-square {
@@ -70,7 +68,6 @@
     border-radius: 50px;
 }
 
-
 /*** Layout ***/
 .sidebar {
     position: fixed;
@@ -86,9 +83,9 @@
 }
 
 .content {
-    margin-left: 250px;
+    /* margin-left: 250px; */
     min-height: 100vh;
-    background: #FFFFFF;
+    background: #ffffff;
     transition: 0.5s;
 }
 
@@ -98,11 +95,13 @@
     }
 
     .sidebar.open {
+        /* margin-left: -250px; */
         margin-left: -250px;
     }
 
     .content {
-        width: calc(100% - 250px);
+        /* width: calc(100% - 250px); */
+        width: 100%;
     }
 
     .content.open {
@@ -126,18 +125,8 @@
     }
 }
 
-
 /*** Navbar ***/
 .sidebar .navbar .navbar-nav .nav-link {
-    padding: 7px 20px;
-    color: var(--dark);
-    font-weight: 500;
-    border-left: 3px solid var(--light);
-    border-radius: 0 30px 30px 0;
-    outline: none;
-}
-
-.sidebar .navbar .navbar-nav .nav-link .logout{
     padding: 7px 20px;
     color: var(--dark);
     font-weight: 500;
@@ -149,7 +138,7 @@
 .sidebar .navbar .navbar-nav .nav-link:hover,
 .sidebar .navbar .navbar-nav .nav-link.active {
     color: var(--primary);
-    background: #FFFFFF;
+    background: #ffffff;
     border-color: var(--primary);
 }
 
@@ -159,7 +148,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 40px;
 }
 
@@ -176,10 +165,10 @@
     content: "\f107";
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
-    transition: .5s;
+    transition: 0.5s;
 }
 
-.sidebar .navbar .dropdown-toggle[aria-expanded=true]::after {
+.sidebar .navbar .dropdown-toggle[aria-expanded="true"]::after {
     transform: rotate(-180deg);
 }
 
@@ -207,7 +196,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 40px;
 }
 
@@ -218,10 +207,10 @@
     content: "\f107";
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
-    transition: .5s;
+    transition: 0.5s;
 }
 
-.content .navbar .dropdown-toggle[aria-expanded=true]::after {
+.content .navbar .dropdown-toggle[aria-expanded="true"]::after {
     transform: rotate(-180deg);
 }
 
@@ -231,6 +220,66 @@
     }
 }
 
+/* Log out */
+.sidebar .navbar .navbar-nav .nav-link2 {
+    padding: 7px 20px;
+    color: var(--danger);
+    font-weight: 500;
+    border-left: 3px solid var(--danger);
+    border-radius: 0 30px 30px 0;
+    outline: none;
+}
+
+.sidebar .navbar .navbar-nav .nav-link2:hover,
+.sidebar .navbar .navbar-nav .nav-link2.active {
+    color: var(--light);
+    background: var(--danger);
+    border-color: var(--danger);
+}
+
+.sidebar .navbar .navbar-nav .nav-link2 i {
+    width: 40px;
+    height: 40px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: #ffffff;
+    border-radius: 40px;
+}
+
+.sidebar .navbar .navbar-nav .nav-link2:hover i,
+.sidebar .navbar .navbar-nav .nav-link2.active i {
+    background: var(--danger);
+}
+
+.content .navbar .navbar-nav .nav-link2 {
+    margin-left: 25px;
+    padding: 12px 0;
+    color: var(--dark);
+    outline: none;
+}
+
+.content .navbar .navbar-nav .nav-link2:hover,
+.content .navbar .navbar-nav .nav-link2.active {
+    color: var(--primary);
+}
+
+.content .navbar .sidebar-toggler,
+.content .navbar .navbar-nav .nav-link2 i {
+    width: 40px;
+    height: 40px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: #ffffff;
+    border-radius: 40px;
+}
+
+@media (max-width: 575.98px) {
+    .content .navbar .navbar-nav .nav-link2 {
+        margin-left: 15px;
+    }
+}
 
 /*** Date Picker ***/
 .bootstrap-datetimepicker-widget.bottom {
@@ -259,13 +308,11 @@
     border-bottom-color: var(--primary);
 }
 
-
 /*** Testimonial ***/
 .progress .progress-bar {
     width: 0px;
     transition: 2s;
 }
-
 
 /*** Testimonial ***/
 .testimonial-carousel .owl-dots {
@@ -283,7 +330,7 @@
     height: 15px;
     border: 5px solid var(--primary);
     border-radius: 15px;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .testimonial-carousel .owl-dot.active {
