--- a/public/dashmin/css/style.css
+++ b/public/dashmin/css/style.css
@@ -3,6 +3,14 @@
     bottom: 10px;
 }
 
+.text-logout{
+    color: #dc3545;
+}
+.text-logout:hover{
+    color: var(--light);
+    background-color: #dc3545;
+}
+
 /********** Template CSS **********/
 :root {
     --primary: #009cff;
